# rpa-demo

./: .env.example  .gitignore  README.md  chaos_config.yaml  docker-compose.yml  pyproject.toml
mock_site/: Dockerfile
mock_site/backend/: chaos.py  main.py  models.py  seed.py
mock_site/frontend/: index.html
rpa/: columns.py  mock_notifier.py  playwright_tasks.py  playwright_tasks_fragile.py  runner.py
tests/: conftest.py  test_api.py  test_chaos_status.py  test_frontend_contract.py  test_notifier.py  test_playwright.py  test_playwright_helpers.py  test_runner.py  test_selector_chaos.py  test_ui_helpers.py
tests/sample_requests/: SP-102_request.csv  SP-103_request.csv  SP-201_request.csv  SP-202_request.csv  SP-203_request.csv  SP-204_request.csv  SP-205_request.csv  SP-206_request.csv  SP-301_request.csv  SP-302_request.csv  SP-401_request.csv  SP-402_request.csv  SP-403_request.csv  SP-404_request.csv  SP-405_request.csv  SP-501_request.csv  SP-502_request.csv  SP-503_request.csv
