[project]
name = "rpa-demo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "faker>=24.0",
    "watchdog>=4.0",
    "playwright>=1.43",
    "pandas>=2.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "httpx[test]>=0.28.1",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.16",
    "starlette>=1.2.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (covered by formatter)
    "B008",  # FastAPI Depends() in default args — standard pattern
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mock_site.*"]
ignore_errors = true  # SQLAlchemy declarative_base has no bundled stubs

[tool.bandit]
targets = ["rpa", "mock_site"]
severity = "medium"  # ignore low-severity findings

[tool.deptry]
ignore = ["DEP004"]  # dev deps used in non-test files (e.g. Playwright in rpa/)
per_rule_ignores = { DEP002 = ["uvicorn"] }  # uvicorn is a CLI runtime, not imported
